Changed some style, but it's really not good yet.

--- a/index.html
+++ b/index.html
@@ -55,17 +55,19 @@
     </section>
     <section class='section'>
       <div class='row'>
-        <div class='col-xs-12'>
-          <h3>
-            The code projects:
-          </h3>
-          <ul>
+        <div class='col-xs-12 col-sm-8 col-sm-offset-2'>
+          <div class='well'>
+            <h3>
+              The code projects:
+            </h3>
+            <ul>
               <li><a href="guides/lecture1.html">Lecture 1: Intro to HTML</a></li> 
               <li><a href="guides/lecture2.html">Lecture 2: Intro to CSS</a></li>
               <li><a href='guides/lecture3.html'>Lecture 3: Intro to CSS Frameworks (using MaterializeCSS)</a></li>
               <li><a href='guides/lecture5.html'>Lecture 5: Javascript Basics</a></li>
               <li><a href='guides/lecture6.html'>Lecture 6: Javascript Odds or Evens Exercise</a></li>
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
