had to restart real quick. Don't mind me

--- a/guides/lecture7.html
+++ b/guides/lecture7.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>
-      Lecture 7: Odds or Evens
+      Lecture 7: Ajax form request and submission
     </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
           </button>
-          <a class='navbar-brand' href='#home'>L6: Odds or Evens</a>
+          <a class='navbar-brand' href='#home'>L7: Ajax and serialization</a>
         </div>
         <div class='collapse navbar-collapse' id='navbar-collapse-1'>
           <ul class='nav navbar-nav'>
@@ -77,7 +77,7 @@
          id='home'>
       <div class='row'>
         <div class='col-sm-12 text-center'>
-          <h2>Let's make odds-or-evens!</h2>
+          <h2>Ajax and serialization</h2>
           <h4>Written by: Aaron Niskin</h4>
         </div>
       </div>
