--- a/assessments/lecture7.html
+++ b/assessments/lecture7.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>
-      Lecture 7: Odds or Evens
+      Lecture 7: Ajax and serialization
     </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,22 +11,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <style>
-    body {
-      padding-top: 70px;
-    }
-    .blur {
-      border-radius: 4px;
-      width:100%;
-      height:100%;
-      background-size:cover;
-      -webkit-filter: blur(4px);
-      -moz-filter: blur(4px);
-      -ms-filter: blur(4px);
-      -o-filter: blur(4px);
-      filter: blur(4px);
-    }
-    </style>
   </head>
   <body>
     <nav class='navbar navbar-default navbar-fixed-top'>
