Made lecture 7 'assessment'? thing.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
               <li><a href='guides/lecture3.html'>Lecture 3: Intro to CSS Frameworks (using MaterializeCSS)</a></li>
               <li><a href='guides/lecture5.html'>Lecture 5: Javascript Basics</a></li>
               <li><a href='guides/lecture6.html'>Lecture 6: Javascript Odds or Evens Exercise</a></li>
+              <li><a href='guides/lecture7.html'>Lecture 7: Ajax and Serialization</a></li>
             </ul>
           </div>
         </div>
