--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-               0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <style>
-      .well {
-        background-color: white;
-      }
       body, html {
         height: 100%;
         width: 100%;
@@ -42,6 +39,17 @@
       }
       .project * {
         transition: opacity 0.5s linear;
+        border-radius: 20%;
+      }
+      .well {
+        background: white; /* For browsers that do not support gradients */
+        background: -webkit-radial-gradient(white 10%, #028DEA 70%); /* Safari 5.1 to 6.0 */
+        background: -o-radial-gradient(white 10%, #028DEA 70%); /* For Opera 11.6 to 12.0 */
+        background: -moz-radial-gradient(white 10%, #028DEA 70%); /* For Firefox 3.6 to 15 */
+        background: radial-gradient(white 10%, transparent 80%); /* Standard syntax */
+        border:none;
+        border-radius:20%;
+        overflow:hidden;
       }
     </style>
 	</head>
